1. Метод .of [#353419]