@@ -16,7 +16,7 @@ public class ConvertListTest {
         List<int[]> in = new ArrayList<>();
         in.add(new int[] {1});
         in.add(new int[] {2, 3});
-        List<Integer> expect = Arrays.asList(1, 2, 3);
+        List<Integer> expect = List.of(1, 2, 3);
         assertThat(ConvertList.convert(in), is(expect));
     }
 
@@ -26,7 +26,7 @@ public class ConvertListTest {
         in.add(new int[] {1, 4, 6});
         in.add(new int[] {2, 3});
         in.add(new int[] {0, 1, 1});
-        List<Integer> expect = Arrays.asList(1, 4, 6, 2, 3, 0, 1, 1);
+        List<Integer> expect = List.of(1, 4, 6, 2, 3, 0, 1, 1);
         assertThat(ConvertList.convert(in), is(expect));
     }
 }
